--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <configuration>
                         <goals>install</goals>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
                 </plugin>
             </plugins>
@@ -47,7 +48,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/mdmg92/sfg-pet-clinic-1.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/mdmg92/sfg-pet-clinic.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
